<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cobrain</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username"></string>
    <string name="password"></string>
    <string name="blah">My friend what are you doing i am not feeeling it because of this long blah string!</string>
    <!-- string name="username">walter@cobrain.com</string>
    <string name="password">walterwalter</string-->
    <string name="forgot_password_link"><small><u><B>Forgot your password?</B></u></small></string>
    <string name="forgot_password_cancel_link"><small><u><B>Cancel</B></u></small></string>
    <string name="rank_for_you"><![CDATA[<small>#%1$d of %2$d Craves]]></string>
    <string name="rank_for_you_empty"><![CDATA[<small>0 Craves]]></string>
    <string name="item_out_of_num_items">out of %1$,d apparel items</string>
    <string name="item_out_of_num_item">out of 1 apparel item</string>
    <string name="craves_found"><![CDATA[<b><font color="#00BE9B">%1$d</font> Craves Found</b>]]></string>
    <string name="invite_sms_subject">Join me at Cobrain!</string>
    <string name="invite_sms_body">Hey, I need your opinion of my Cobrain rack. See it here: %1$s</string>
    <string name="splash_caption"><![CDATA[Already a member? <font color="#f05923">Login</font>]]></string>
	<string name="profile_name_label">Name*</string>
   	<string name="profile_zipcode_label"><![CDATA[Zipcode* <font color="#ffaaaaaa"><small>(To help find location specific clothing for you)</small></font>]]></string>
   	<string name="profile_gender_label">Do you prefer clothing designed for Men or for Women?</string>
    <string name="friend_accept_caption">%1$s wants your opinion on the Craves in his Shared Rack.</string>
    <string name="friend_dismiss_link"><u>Dismiss Request</u></string>
    
    <!-- feed strings -->
    <string name="friend_likes_own"><![CDATA[<font color=\"#%2$x\">%1$s</font> liked a new item]]></string>
    <string name="friend_raves_mine"><![CDATA[<font color=\"#%2$x\">%1$s</font> raved your shared crave]]></string>
    
    <!-- urls for qa and prd -->
    <string name="cobrain_api_version_qa">*</string> <!-- 1.3.0 -->
    <string name="cobrain_api_version_prd">*</string>
    <string name="url_cobrain_api_qa">https://qa.api.cobrain.com</string>
    <string name="url_cobrain_api_prd">https://beaker.cobrain.com</string>
    <string name="url_cobrain_app_qa">https://qa.cobrain.com</string>
    <string name="url_cobrain_app_prd">https://cobrain.com</string>
    <string name="sms_invite_validation_number_dev">+1(202)4994992</string>
    <string name="sms_invite_validation_number_qa">+1(202)4994992</string>
    <string name="sms_invite_validation_number_prd">+1(443)5397345</string>
    <!--  -->

    <item type="string" name="cobrain_api_version">@string/cobrain_api_version_qa</item>
    <item type="string" name="url_cobrain_api">@string/url_cobrain_api_qa</item>
    <item type="string" name="url_cobrain_app">@string/url_cobrain_app_qa</item>
    <item type="string" name="sms_invite_validation_number">@string/sms_invite_validation_number_qa</item>

    <string name="url_about_us">%1$s/about-us</string>

    <string name="url_logout_get">%1$s/logout</string>
    <string name="url_login_post">%1$s/account/login</string>
    <string name="url_account_post">%1$s/account</string>
    <string name="url_password_reset_get">%1$s/account/password/new</string>
    <string name="url_password_reset_post">%1$s/account/password</string>
    <string name="url_password_change_get">%1$s/account/edit</string>
    <string name="url_password_change_post">%1$s/account</string>
    
    <!-- v 2.1 (push notifications) -->
    <string name="url_settings_get">%1$s/settings</string>
    <string name="url_devices_get">%1$s/devices</string>
    <string name="url_device_post">%1$s/devices</string>
    <string name="url_device_put">%1$s/devices/%2$s</string>
    <string name="url_device_delete">%1$s/devices/%2$s</string>
    
    <!-- v 2.0 -->
    <string name="url_profile_get">%1$s/users/me</string>
    <string name="url_profile_delete">%1$s/users/me</string>
    <string name="url_profile_put">%1$s/users/me</string>
    <string name="url_scenarios_get">%1$s/scenarios</string>
    <string name="url_scenario_get">%1$s/scenarios/%2$s</string>
    <string name="url_friendships_get">%1$s/friendships</string>
    <string name="url_friendships_put">%1$s/friendships/%2$s</string>
    <string name="url_friendships_delete">%1$s/friendships/%2$s</string>
    <string name="url_opinions_put">%1$s/opinions/%2$s</string>
    <string name="url_skus_get">%1$s/skus</string>
    <string name="url_feed_get">%1$s/feed</string>
    <string name="url_raves_post">%1$s/raves</string>
    <string name="url_raves_delete">%1$s/raves/%2$s</string>
    
    <!-- v 1.0 -->
    <string name="url_recommendations_get">%1$s/v1/recommendations</string>
    <string name="url_trainings_post">%1$s/v1/trainings</string>
    <string name="url_trainings_answers_post">%1$s/v1/trainings/%2$d/answers</string>
    <string name="url_trainings_skip_post">%1$s/v1/trainings/%2$d/skip</string>
    <string name="url_invitations_post">%1$s/v1/invitations</string>
    <string name="url_profile_invitations_get">%1$s/v1/profile/invitations</string>
    <string name="url_lists_get">%1$s/v1/lists</string>
    <string name="url_lists_unsubscribe_delete">%1$s/v1/lists/%2$s/subscriptions/%3$s</string>
    <string name="url_lists_subscribe_put">%1$s/v1/lists/%2$s/subscriptions/%3$s</string>
    <string name="url_list_get">%1$s/v1/lists/%2$s</string>
    <string name="url_lists_items_post">%1$s/v1/lists/%2$s/items</string>
    <string name="url_lists_item_publish_put">%1$s/v1/lists/%2$s/items/%3$s</string>
    <string name="url_lists_item_del">%1$s/v1/lists/%2$s/items/%3$s</string>
    <string name="url_category_get">%1$s/categories/%2$s</string>
    <string name="url_lists_rave_post">%1$s/v1/lists/%2$s/items/%3$s/raves</string>
    <string name="url_lists_rave_delete">%1$s/v1/lists/%2$s/items/%3$s/raves/%4$s</string>
    <string name="url_hashed_phone_post">%1$s/account/phone</string>
    <string name="url_invite">%1$s/mobile/download?phone=%2$s&amp;inviter=%3$s</string>
    <string name="url_invite_email">%1$s/favorites/exchange/%2$s</string>
    <string name="bit_ly_access_token">cec181fe7d7e98f7dce6d00ebc603ea4b50801b2</string>
    
    <string name="url_tastemaker_beta_program_rules">%1$s/campaign/tastemaker</string>
    <string name="tastemaker_beta_program_rules_link"><![CDATA[<a href=\"%1$s\">Tastemaker Beta Program Rules</a>]]></string>
    <string name="tastemaker_beta_link"><![CDATA[Hurry, start adding friends now!<br><a href=\"%1$s\">The Tastemaker Beta</a> is filling up fast.]]></string>
    <string name="tastemaker_dont_show_again_link"><![CDATA[<u>Don\'t Show This Again</u>]]></string>
    <string name="tastemaker_status"><![CDATA[Invite %1$d more friends and you\'ll get the <font color=\"#5097d4\">Trendsetter Badge</font> AND earn $12]]></string>
</resources>
