<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#949"
    >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#949" >

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/drop_shadow" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff3ff"
            android:padding="20dp"
            android:paddingTop="25dp" >

            <ImageView
                android:id="@+id/cobrain_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:src="@drawable/logo_cobrain" />

            <TextView
                android:id="@+id/intro_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cobrain_logo"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                android:text="" />

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/intro_text"
                android:layout_marginBottom="10dp"
                android:text="@string/profile_name_label" />

            <EditText
                android:id="@+id/name"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_label" />

            <TextView
                android:id="@+id/zipcode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/profile_zipcode_label" />

            <EditText
                android:id="@+id/zipcode"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/zipcode_label" />

            <TextView
                android:id="@+id/gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/zipcode"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/profile_gender_label" />

            		<Spinner 
        android:id="@+id/gender"
        style="@style/edit_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender_label"
        android:entries="@array/profile_gender_names"
    	/>

       		<TextView 
       		    android:id="@+id/verify_message"
       		    android:layout_width="wrap_content"
       		    android:layout_height="wrap_content"
       		    android:layout_marginTop="20dp"
       		    android:gravity="center_horizontal"
       		    android:layout_below="@+id/gender"
       		    android:text="We need to verify you so you can receive friend invites"
       		    />
            <Button
                android:id="@+id/verify_invite_button"
                style="@style/verify_invite_button"
                android:layout_below="@+id/verify_message"
                android:text="SEND CODE TO VERIFY ME" />
            
            <Button
                android:id="@+id/save_account_button"
                style="@style/skip_verify_button"
                android:layout_below="@+id/verify_invite_button"
                 />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
</ScrollView>